# library

./: .gitignore  GEMINI.md  README.md  pyproject.toml  requirements.txt  requirements_ALL.txt  test_error.txt  test_output.txt  test_output_2.txt  test_output_3.txt  test_output_4.txt  test_output_5.txt
.github/workflows/: django-ci.yml
docs/: ARCH_DESIGN.md  TODO.md  remind.md  test_todo.md  translation_gemini_global.md
libarally/: db.sqlite3  manage.py  seed_data.py
libarally/BookApp/: apps.py  models.py  urls.py  views.py
libarally/BookApp/migrations/: 0001_initial.py
libarally/accounts/: admin.py  apps.py  factories.py  forms.py  models.py  urls.py  views.py
libarally/accounts/migrations/: 0001_initial.py
libarally/accounts/tests/: test_models.py
libarally/books/: admin.py  factories.py  forms.py  models.py  urls.py  views.py
libarally/books/migrations/: 0001_initial.py  0003_alter_book_status_favorite.py
libarally/books/tests/: test_models.py  test_views.py
libarally/core/: admin.py  models.py
libarally/core/models/: base.py  mixins.py
libarally/core/templatetags/: __init__.py  core_tags.py
libarally/core/tests/: test_base_models.py  test_mixins.py  test_models_base.py  test_tags.py
libarally/core/views/: mixins.py
libarally/dashboard/: urls.py  views.py
libarally/libarally/: asgi.py  settings.py  urls.py  wsgi.py
libarally/static/css/: main.css
libarally/templates/BookApp/: Book_list.html
libarally/templates/accounts/: base.html  index.html  (+3 more)
libarally/transactions/: factories.py  models.py  tests.py  urls.py  views.py
(+15 files in other folders)
