[project]
name = "library-portfolio"
version = "0.1.0"
description = "Distributed Library Management Application Prototype"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.7",
    "django-environ>=0.14.0",
    "django-widget-tweaks>=1.5.1",
    "pillow>=12.3.0",
]

[tool.ruff]
# 除外するディレクトリ
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "migrations",
]

# 1行の最大文字数
line-length = 119

[tool.ruff.lint]
# 有効にするルール
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (インポート順序)
    "B",   # flake8-bugbear (バグの芽)
    "C90", # mccabe (複雑度)
]
ignore = []

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.mypy]
# Djangoプラグインを有効化
plugins = ["mypy_django_plugin.main"]
mypy_path = "library"


# 型ヒントがない関数もチェック対象にする
disallow_untyped_defs = false
check_untyped_defs = true

# インポート先の型情報がない場合のエラーを無視
ignore_missing_imports = true

# 厳格なモード（必要に応じて調整）
strict_optional = true

# エラーが多い、または設計上の理由で型解決が困難な箇所の抑制
[[tool.mypy.overrides]]
module = [
    "*.tests.*",
    "core.views.mixins",
    "core.tests.*",
    "accounts.tests.*",
    "catalog.tests.*",
    "transactions.tests.*",
]
ignore_errors = true

[tool.django-stubs]
django_settings_module = "config.settings"

[dependency-groups]
dev = [
    "django-stubs>=6.0.7",
    "factory-boy>=3.3.3",
    "faker>=40.35.0",
    "mypy>=2.3.0",
    "ruff>=0.16.0",
]
